test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/third_party/testsuite/block.wast:159: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:163: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:167: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:171: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:176: assert_invalid passed:
  error: type stack at end of block is 1, expected 0
  000001c: error: OnEndExpr callback failed
out/third_party/testsuite/block.wast:182: assert_invalid passed:
  error: type stack size too small at block. got 0, expected at least 1
  000001b: error: OnEndExpr callback failed
out/third_party/testsuite/block.wast:188: assert_invalid passed:
  error: type stack size too small at block. got 0, expected at least 1
  000001c: error: OnEndExpr callback failed
out/third_party/testsuite/block.wast:194: assert_invalid passed:
  error: type mismatch in block, expected i32 but got f32.
  0000020: error: OnEndExpr callback failed
out/third_party/testsuite/block.wast:200: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got i64.
  0000020: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:207: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:213: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:220: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001d: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:226: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:232: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001d: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:238: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:245: assert_invalid passed:
  error: type stack at end of function is 1, expected 0
  0000024: error: EndFunctionBody callback failed
out/third_party/testsuite/block.wast:251: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:258: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001f: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:264: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  0000020: error: OnBrExpr callback failed
out/third_party/testsuite/block.wast:273: assert_invalid passed:
  error: type stack size too small at i32.ctz. got 0, expected at least 1
  000001e: error: OnUnaryExpr callback failed
out/third_party/testsuite/block.wast:279: assert_invalid passed:
  error: type stack size too small at i64.ctz. got 0, expected at least 1
  000001f: error: OnUnaryExpr callback failed
out/third_party/testsuite/block.wast:285: assert_invalid passed:
  error: type stack size too small at i64.ctz. got 0, expected at least 1
  0000020: error: OnUnaryExpr callback failed
out/third_party/testsuite/block.wast:293: assert_malformed passed:
  out/third_party/testsuite/block/block.23.wast:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/third_party/testsuite/block.wast:297: assert_malformed passed:
  out/third_party/testsuite/block/block.24.wast:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
38/38 tests passed.
;;; STDOUT ;;)
